--- a/Huy/css/header.css
+++ b/Huy/css/header.css
@@ -16,11 +16,14 @@ header{
 }
 
 header .mobi{
+
     position: absolute;
     display: none; 
     width: 50%;
     min-height: 100vh;
     background-color: rgb(255, 249, 243);
+   
+    
 }
 header .mobi>ul {
     list-style: none;
@@ -57,7 +60,7 @@ header .daubuoi .button{
     
 }
 
-header .container{
+header .container2{
     font-family: "Roboto", sans-serif;
     font-weight: 300;
     font-style: normal;
@@ -68,32 +71,32 @@ header .container{
 }
 
 
-header .container .iteam2{
+header .container2 .iteam2{
     margin-left: 50px;
     margin-top: 35px;
      
  }
 
 
-header .container>div>ul{
+header .container2>div>ul{
     list-style: none;
     display: flex;
    
 }
-header .container>div>ul>li{
+header .container2>div>ul>li{
     margin-left: 40px;
    
 }
-header .container>div>ul>li>a:hover{
+header .container2>div>ul>li>a:hover{
     transition-duration: 0.5s;
    color: rgb(188, 152, 113);
 }
-header .container>div>ul>li>a{
+header .container2>div>ul>li>a{
     text-decoration: none;
     color: aliceblue;
    
 }
-header .container .iteam3{
+header .container2 .iteam3{
     margin:5px 0 ;
     width: 300px;
     margin-left: 90px;
@@ -103,16 +106,16 @@ header .container .iteam3{
    
     
 }
-header .container .iteam3>div{
+header .container2 .iteam3>div{
     margin-left: 20px;
     margin-top: 3px;
     
 }
-header .container .iteam3 #mot{
+header .container2 .iteam3 #mot{
     padding-top: 15px;
     font-size: 35px;
 }
-header .container .iteam3 #hai{
+header .container2 .iteam3 #hai{
     padding-top: 16px;
 
  
@@ -129,7 +132,7 @@ header .container .iteam3 #hai{
         
        
     }
-    header .container{
+    header .container2{
         font-family: "Roboto", sans-serif;
         font-weight: 300;
         font-style: normal;
@@ -140,7 +143,7 @@ header .container .iteam3 #hai{
     }
     
     
-    header .container .iteam2{
+    header .container2 .iteam2{
         margin-left: 5px;
         margin-top: 35px;
         width: 80%;
@@ -148,26 +151,26 @@ header .container .iteam3 #hai{
      }
     
     
-    header .container>div>ul{
+    header .container2>div>ul{
         width: 100%;
         list-style: none;
         display: flex;
        
     }
-    header .container>div>ul>li{
+    header .container2>div>ul>li{
         margin-left: 7%;
        
     }
-    header .container>div>ul>li>a:hover{
+    header .container2>div>ul>li>a:hover{
         transition-duration: 0.5s;
        color: rgb(188, 152, 113);
     }
-    header .container>div>ul>li>a{
+    header .container2>div>ul>li>a{
         text-decoration: none;
         color: aliceblue;
        
     }
-    header .container .iteam3{
+    header .container2 .iteam3{
         margin:5px 0 ;
         margin-left: 1px;
         width: 10%;
@@ -179,11 +182,11 @@ header .container .iteam3 #hai{
         
     }
  
-    header .container .iteam3 #mot{
+    header .container2 .iteam3 #mot{
         padding-top: 15px;
         font-size: 20px;
     }
-    header .container .iteam3 #hai{
+    header .container2 .iteam3 #hai{
         padding-top: 16px;
         font-size: 10px;
     
@@ -195,7 +198,7 @@ header .container .iteam3 #hai{
 }
 @media screen and (max-width: 844px) {
  
-    header .container{
+    header .container2{
         display: none;
 
     }
