--- a/css/contactus.css
+++ b/css/contactus.css
@@ -143,15 +143,14 @@ body{
     margin-top: 100px;
 }
 .map {
-    width: 50%; 
-    height: 550px;
+
     position: absolute;
-    left: 25%;
+    left: auto;
 }
 .map1 {
     position: absolute;
-    left: 40%;
-    top: 848px;
+    left: 50%;
+    top: 1468px;
 }
 .map-full {
     width: 100%; 
