--- a/css/FAQ.css
+++ b/css/FAQ.css
@@ -3,6 +3,11 @@
     padding:0;
     box-sizing: border-box;
 }
+header .iteam3 p{
+    margin: 0;
+    
+    
+}
 body{
     background-color: #fafafa;
     font-family: 'Roboto', sans-serif;
@@ -98,13 +103,16 @@ body{
 .section_main{
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 110vh;
+
     background-position: center;
+    padding-bottom: 100px;
 }
-.icon{
+.section_main .icon{
     height: 120px;
-    width: 120px;
+    width: 100%;
     margin: auto;
+    margin-bottom: 200px;
+   
 }
 .doimau1:hover{
     color:  brown;
@@ -117,8 +125,8 @@ body{
 #iteamtext{
     padding-top: 10px;
     color: white;
-    width: 80%;
-    margin-left: 10%;
+    width: 60%;
+    margin: auto;
 }
 #thua {
     display: flex;
@@ -221,3 +229,327 @@ body{
     }
     
 }
+
+/* kien */
+
+.story{
+
+    max-width: 1300px;
+    margin: auto;
+    margin-top: 100px;
+    margin-bottom:50px;
+    
+}
+.story .story1{
+
+    position: relative;
+    
+}
+section .nen{
+    margin-top: 50px;
+  
+    width: 70%;
+    height: 100%;
+    background-color: rgb(60, 143, 71);
+    display: flex;
+}
+
+section .nen>button{
+    width: 60px;
+    display: flex;
+    align-items: center;
+    height: 60px;
+    border-radius: 50%;
+    background-color: #fafafa00;
+    border: 1px solid white;
+    margin-top: auto;
+    box-sizing: border-box;
+    margin-bottom: 40px;
+    margin-left: 20px;
+    animation-name: chimcuccu;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    transition: 0.5s;
+    
+}
+section .nen>button:hover{
+    background-color: #839e5f;
+    transition: 0.5s;
+    transform: scale(1.3);
+  
+}
+
+@keyframes chimcuccu {
+    0%{
+        
+        box-shadow: 0 0 0px rgb(231, 11, 11);
+    }
+    30%{
+
+        box-shadow: 0 0 30px rgba(233, 219, 28, 0.884);
+    }
+    50%{
+        box-shadow: 0 0 50px rgba(255, 255, 255, 0.658);
+    }
+    
+    80%{
+        box-shadow: 0 0 70px rgba(255, 255, 255, 0.363);
+    }
+
+    100%{
+       
+      
+       
+        box-shadow: 0 0 100px rgba(255, 255, 255, 0);
+    }
+    
+}
+
+
+
+
+
+section .nen>button i{
+    font-size: 21px;
+    margin: auto;
+    color: white;
+}
+section .nen p{
+    font-size: 21px;
+    margin-top: auto;
+    margin-bottom: 52px;
+    margin-left: 20px;
+    color: white;
+}
+
+
+
+
+section .row .story1 .anh>img{
+    position: absolute;
+    width: 300px;
+    
+}
+section .row .story1 .anh #anh1{
+    right: 10px;
+    bottom: -20px;
+    transition: 0.5s;
+    
+}
+section .row .story1 .anh #anh2{
+    left: 30px;
+    transition: 0.2s;
+    
+}
+section .row .story1 .anh #anh2:hover{
+    transform: translateY(-20px);
+    transition: 0.2s;
+    
+}
+section .row .story1 .anh #anh1:hover{
+    transform: translateY(-20px);
+    transition: 0.2s;
+    
+}
+
+@media screen and (max-width: 1047px){
+
+    section .row .story1 .anh>img{
+        padding-top: 60px;
+        position: static;
+        width: 100%;
+        height: 70vh;
+        
+        
+    }
+    section .row .story1 .anh #anh1{
+        display: none;
+        transition: 0.5s;
+        
+    }
+    section .row .story1 .anh #anh2{
+      
+        transition: 0.2s;
+        
+        
+    }
+    section .row .story1 .anh #anh2:hover{
+        
+        transform: translateY(0);
+        
+        
+    }
+    section .nen{
+        margin-top: 0px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 10vh;
+        width: 100%;
+        background-color: rgb(60, 143, 71);
+        margin-bottom: 100px;
+        
+    }
+    section .nen>button{
+        width: 60px;
+        display: flex;
+        margin: 0;
+        align-items: center;
+        height: 60px;
+        border-radius: 50%;
+        background-color: #fafafa00;
+        border: 1px solid white;
+        box-sizing: border-box;
+        animation-name: chimcuccu;
+        animation-duration: 2s;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear;
+        transition: 0.5s;
+        
+        
+    }
+    section .nen p{
+        font-size: 21px;
+        margin-top: auto;
+        margin-bottom: 0px;
+        margin-left: 10px;
+        margin-bottom: 28px;
+        color: white;
+    }
+    
+
+}
+
+/* cuoi */
+main .container4{
+    width: 100%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(500px,1fr));
+    font-family: "Oswald", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    margin-bottom: 20px;
+    padding: 0 10px;
+
+
+   
+}
+main .container4 .lich{
+    position: relative;
+    background-color: rgb(60, 143, 71);
+    color: white;
+    padding: 90px 70px ;
+    
+}
+
+main .container4 .lich .lichmenu .thu{
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    border-bottom: 1px dashed rgba(0, 0, 0, 0.281);
+    
+ 
+    
+}
+main .container4 .lich #sau{
+    position: absolute;
+    bottom: -10px;
+    left: -10px;
+    
+ 
+    
+}
+main .container4 .lich .lichmenu .thu #mocua{
+  
+    font-weight: 300;
+ 
+    
+}
+/*  */
+main .container4 .datban{
+    position: relative;
+    background-color:rgb(188, 152, 115);
+    color: white;
+    padding: 90px 70px ;
+    
+}
+main .container4 .lienhe #datban{
+   
+    display: flex;
+    justify-items: center;
+    margin: 40px 0;
+    
+    
+}
+main .container4 .lienhe #datban .dat>p{
+    margin: 0;
+   
+    
+    
+    
+}
+main .container4 .lienhe #datban .icon{
+    
+    border: 1px solid white;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    transition: 0.5s;
+    margin-left: 0;
+    margin-right: 10px;
+    
+    
+}
+main .container4 .lienhe #datban .icon>p{
+    margin: auto;
+    font-size: 20px;
+ 
+    
+}
+
+
+main .container4 .lienhe #datban .icon:hover{
+   background-color: white;
+   color:rgb(188, 152, 115) ;  
+   transition: 0.5s;
+
+  
+    
+    
+    
+}
+
+
+
+main .container4 .datban>button{
+    width: 200px;
+    height: 50px;
+    color: rgb(188, 152, 115);
+    background-color: white;
+    border: 1px solid white;
+    transition: 0.5s;
+}
+main .container4 .datban>button:hover{
+   background-color: rgb(188, 152, 115);
+   color: white;
+   transition: 0.5s;
+}
+main .container4 .datban #sau{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+   
+   
+}
+ 
+.container4 .img{
+    background-color: aqua;
+    background-image: url(/image/coffee.jpg);
+    background-size: cover;
+
+}
+ 
