--- a/css/hearder.css
+++ b/css/hearder.css
@@ -124,12 +124,12 @@ header .container .iteam3 #hai{
     display: flex;
     position: relative;
 }
-.contrainer1 .top{
+.contrainer1 .phan_tren{
     position: absolute;
     top:100px;
     left: 40%;
 }
-.contrainer1 .bottom{
+.contrainer1 .phan_duoi{
     position: absolute;
     top:180px;
     left: 40%;
